Revert to working cards, fix overflow and save above

--- a/styles/list.css
+++ b/styles/list.css
@@ -28,10 +28,11 @@
 .list-cards {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  
   width: 100%;
+  max-height: calc(100vh - 230px);
   gap: 7px;
-  flex: 1 1 auto;
+  flex: 0 0 auto;
   overflow-y: auto;
 }
 
@@ -39,6 +40,7 @@
   width: 100%;
   height: 70px;
   background-color: cadetblue;
+  flex: 0 0 auto;
 }
 
 .card-creator {
